Add grading commit note to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p>This is the file where you can see changes reach the website</p>
 <p>This is test 2</p>
 <p>This is test 3</p>
+<p>Grading commit by @russfeld</p>
